add device overview update angular tune navigation

--- a/src/ui/angular/sensor-chart/src/app/app.component.html
+++ b/src/ui/angular/sensor-chart/src/app/app.component.html
@@ -6,6 +6,9 @@
         <a routerLink="/chart">Chart</a>
       </nav>
       <nav>
+        <a routerLink="/device">Devices</a>
+      </nav>
+      <nav>
         <a href="" (click)="back()">Back</a>
       </nav>
     </div>
